--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -10,45 +10,22 @@
 }
 
 .header-content {
-  height: 5em;
+  height: 4em;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0rem 6rem;
+  padding: 0rem 7rem;
 }
 
-/* .logo-text {
-  font-size: 2rem;
-  font-weight: bold;
-} */
 
 .logoImg{
-  width: 10em;
+  width: 8em;
 }
 
-/* 🔘 Botón tema */
-.theme-toggle {
-  background: var(--toggle-bg);
-  border: 1px solid var(--border);
-  border-radius: 12px;
-  width: 42px;
-  height: 42px;
-  padding-top: 2px;
-  font-size: 1em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.logoImg:hover{
   cursor: pointer;
-  color: var(--text);
-  transition: all 0.3s ease;
 }
 
-.theme-toggle:hover {
-  background-color: var(--hover);
-  transform: scale(1.13);
-}
-
-/* 🧭 Enlace */
 .login-link {
   margin-left: 1rem;
   text-decoration: none;
@@ -65,7 +42,7 @@
   transform: scale(1.05);
 }
 
-/* 🍔 Botón menú hamburguesa */
+
 .menu-toggle {
   display: none;
   background: none;
@@ -86,30 +63,12 @@
   transform: scale(1.05);
 }
 
-/* 🧩 Desktop */
 .desktop-items {
   display: flex;
   align-items: center;
 }
 
-/* 🌙 Variables de tema */
-:root {
-  --header-bg: #ffffff;
-  --text: #1f2937;
-  --border: #d1d5db;
-  --hover: #f3f4f6;
-  --toggle-bg: #f9fafb;
-}
 
-.dark {
-  --header-bg: #111827;
-  --text: #f9fafb;
-  --border: #374151;
-  --hover: #1f2937;
-  --toggle-bg: #1e293b;
-}
-
-/* 📱 Responsividad */
 @media (max-width: 780px) {
   .menu-toggle {
     display: flex;
@@ -121,13 +80,6 @@
 
   .header-content {
     padding: 0rem 3rem;
-  }
-
-  .theme-toggle {
-    font-size: 1em;
-    font-weight: 500;
-    width: fit-content;
-    padding: 8px 14px;
   }
 
   .mobile-menu {
