--- a/src/pages/css/Login.css
+++ b/src/pages/css/Login.css
@@ -32,7 +32,7 @@
   padding: 0.5rem;
   border: 1px solid var(--border-color);
   border-radius: 0.5rem;
-  background-color: #fff;
+  background-color: var(--header-bg);
 }
 
 @media (max-width: 780px) {
