--- a/src/pages/css/EventMenu.css
+++ b/src/pages/css/EventMenu.css
@@ -35,7 +35,7 @@ form {
   margin-top: 1rem;
 }
 
-input, textarea {
+input, textarea, select {
   width: 100%;
   padding: 0.6rem;
   border-radius: 8px;
