--- a/src/pages/css/AdminPanel.css
+++ b/src/pages/css/AdminPanel.css
@@ -17,6 +17,11 @@
   margin: 4em auto 0 auto;
 }
 
+.post-header{
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Título */
 .verification-section h3 {
   font-size: 1.8rem;
