--- a/src/pages/css/AdminPanel.css
+++ b/src/pages/css/AdminPanel.css
@@ -22,6 +22,22 @@
   justify-content: space-between;
 }
 
+.post-header div{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.post-header div a{
+  margin-right: 2em;
+  text-decoration: none;
+  background-color: var(--text);
+  color: var(--bg);
+  padding: 0.7em;
+  border-radius: 1em;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.08);
+}
+
 /* Título */
 .verification-section h3 {
   font-size: 1.8rem;
